--- a/templates/historic/historique.html.twig
+++ b/templates/historic/historique.html.twig
@@ -101,7 +101,7 @@
             </form>
     </div>
 
-        {% if mandats is not empty and ventes is not empty %}
+        {% if mandats is not empty or ventes is not empty %}
 
             <table id="ma_table_Ventes" class="table table-striped ml-5 mt-5">
                 <thead>
