--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -69,6 +69,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('admin-challenges') }}">Challenges</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin-miscellaneous') }}">Divers</a>
+                </li>
             </ul>
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                 <ul class="navbar-nav ml-auto">
