--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -357,7 +357,7 @@
                             $('#mesventes').html(data.vente);
                             $('#bouton1').html(data.livree);
                             $('#bouton2').html(data.fraisMER);
-                            $('#bouton3').html(data.garantie);
+                            $('#bouton3').html(data.garanties);
                             $('#bouton4').html(data.financement);
 
                             toastr.success(data.message)
