--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,6 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+    <style>
+        .form-error-message
+        {
+            color: red;
+        }
+    </style>
+
     <img style="right: 0; padding-bottom: 170px; opacity: 50%; position: fixed;" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
     <div class="container">
         <div id="creation_compte" class="card">
