--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -7,8 +7,11 @@
 
     <div class="container">
         {% for message in app.flashes('success') %}
-            <div class="alert alert-success">
+            <div class="alert alert-success mt-5">
                 {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
         {% endfor %}
     </div>
