--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
         <link rel="stylesheet" type="text/css" href="{{ asset('/assets/css/style.css') }}">
+        <script src="{{ asset('/assets/js/script.js') }}"></script>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         {% block stylesheets %}{% endblock %}
     </head>
